--- a/public/blog.html
+++ b/public/blog.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html
+	PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Blog de Pajarraco</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>Blog de Pajarraco</title>
 </head>
 
 <body>
-<a href="http://blog.pajarraco.com">Entrar a mi blog</a>
+	<a href="http://blog.pajarraco.com">Entrar a mi blog</a>
 </body>
+
 </html>
