--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>pajarraco.com - WebCreator</title>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <script src="script/jquery-1.6.2.min.js" type="text/javascript"></script>
-    <script src="script/pajarraco.js" type="text/javascript"></script>
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        (i[r] =
-          i[r] ||
-          function() {
-            (i[r].q = i[r].q || []).push(arguments);
-          }),
-          (i[r].l = 1 * new Date());
-        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m);
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-      ga('create', 'UA-251623-4', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </head>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>pajarraco.com - WebCreator</title>
+	<link href="css/style.css" rel="stylesheet" type="text/css" />
+	<script src="script/jquery-1.6.2.min.js" type="text/javascript"></script>
+	<script src="script/pajarraco.js" type="text/javascript"></script>
+	<script>
+		(function(i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			(i[r] =
+				i[r] ||
+				function() {
+					(i[r].q = i[r].q || []).push(arguments);
+				}),
+				(i[r].l = 1 * new Date());
+			(a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m);
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  <body>
-    <logo><img title="logo pajarraco" src="images/logo_pajarraco.png" alt="logo pajarraco"/></logo>
-    <section id="a1" onmouseover="stop(this);" onmouseout="start()" onclick="window.open('https://instagram.com/frogclimbers', '_blank')" title="Frog Climbers Instagram">Instagram</section>
-    <section id="a2" onmouseover="stop(this);" onmouseout="start()" onclick="window.open('https://www.facebook.com/pajarraco.elf', '_blank')" title="Pajarraco's Facebook'">Facebook</section>
-    <section id="a3" onmouseover="stop(this);" onmouseout="start()" onclick="window.open('https://www.linkedin.com/in/pajarraco', '_blank')" title="Pajarraco's LinkedIn">LinkedIn</section>
-    <section id="a4" onmouseover="stop(this);" onmouseout="start()" onclick="window.open('https://www.youtube.com/channel/UCAbswsLikC3QeLSHmOLdBNA', '_blank')" title="Frog Climbers YouTube">
-      YouTube
-    </section>
-    <section id="a5" onmouseover="stop(this);" onmouseout="start()" onclick="window.open('mailto:mail@pajarraco.com', '_blank')">Contact</section>
-  </body>
+		ga('create', 'UA-251623-4', 'auto');
+		ga('send', 'pageview');
+	</script>
+</head>
+
+<body>
+	<logo><img title="logo pajarraco" src="images/logo_pajarraco.png" alt="logo pajarraco" /></logo>
+	<section id="a1" onmouseover="stop(this);" onmouseout="start()"
+		onclick="window.open('https://instagram.com/frogclimber', '_blank')" title="Frog Climbers Instagram">Instagram
+	</section>
+	<section id="a2" onmouseover="stop(this);" onmouseout="start()"
+		onclick="window.open('https://www.facebook.com/pajarraco.elf', '_blank')" title="Pajarraco's Facebook'">Facebook
+	</section>
+	<section id="a3" onmouseover="stop(this);" onmouseout="start()"
+		onclick="window.open('https://www.linkedin.com/in/pajarraco', '_blank')" title="Pajarraco's LinkedIn">LinkedIn
+	</section>
+	<section id="a4" onmouseover="stop(this);" onmouseout="start()"
+		onclick="window.open('https://www.youtube.com/channel/UCAbswsLikC3QeLSHmOLdBNA', '_blank')"
+		title="Frog Climbers YouTube">
+		YouTube
+	</section>
+	<section id="a5" onmouseover="stop(this);" onmouseout="start()"
+		onclick="window.open('mailto:mail@pajarraco.com', '_blank')">Contact</section>
+</body>
+
 </html>
